--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.2.1",
     "@google/genai": "^1.33.0",
     "framer-motion": "^12.23.26",
-    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@mediapipe/tasks-vision": "0.10.18",
     "lucide-react": "^0.559.0",
     "react-dom": "^19.2.1"
   },
